# uchat

./: .gitignore  CMakeLists.txt  Makefile  Makefile_bot  Makefile_old  README.md  base_db  chat_server  create  create_bd  create_bd.c  db  json_file.json  json_test_arr.c  localhost.crt  log.txt  log_file  logfile  main_client.c  mx_server_worker.c  my_style.css  mycert.pem  openssl  openssl.c  osxrelocator  rec_massage541437335.aif  request_for_rooms 2.c  root.key  run_bot.c  server_db  server_db-journal  sha  sha_test.c  test.c  uchat  uchat.h  uchat_server  work_with_db.c  write.c
CA/: chain.pem  client.crt  revoked.crt  revoked.key  server.crt  uchat_client.crt
CA/root/: index.txt
CA2/: localhost.key  server.crt  server.csr  server.key  sha.c
CA3/: root.srl
Uchat_downloads/: rec_massage:24761786.aif
audio/: 107554536.aif  Makefile  a.out  message_send.aiff  moby.aif  paex_record.c  paex_record_file.c  play  play.c  play2  play2.c  play3  play_3.c  rec_2  rec_3  rec_massage:1075260298.aif  rec_massage:944975825.aif  record  record.c  record_a.c  record_paex  record_raw
client/: Makefile
client/inc/: uchat.h
client/src/: init_info.c  input_from_client.c  input_from_server.c  main.c  start_client.c
emails/: universal.txt
files/: 2020_05_09_20_58_32_my_style.css  2020_05_09_21_04_30_my_style.css  2020_05_09_21_06_40_my_style.css  2020_05_09_21_28_15_my_style.css  2020_05_09_21_31_02_my_style.css  2020_05_09_21_31_47_my_style.css  2020_05_09_21_32_48_my_style.css  2020_05_09_21_35_30_my_style.css  2020_05_09_21_36_27_my_style.css  2020_05_09_21_37_53_my_style.css  2020_05_09_21_41_47_my_style.css  2020_05_09_21_56_50_my_style.css  2020_05_09_22_03_10_my_style.css  2020_05_09_22_05_37_my_style.css  2020_05_09_22_07_25_my_style.css  2020_05_09_22_09_54_my_style.css  2020_05_09_22_11_03_my_style.css  2020_05_09_22_13_38_my_style.css  2020_05_09_22_19_26_my_style.css  2020_05_09_22_24_32_my_style.css  2020_05_09_22_26_42_my_style.css  2020_05_09_22_28_46_my_style.css  2020_05_09_22_29_56_my_style.css  2020_05_09_22_31_25_my_style.css  2020_05_14_21_09_22_my_style.css  2020_05_14_22_09_40_my_style.css  2020_05_16_00_28_41_uchat  2020_05_22_14_08_43_rec_massage:1894832768.aif  2020_05_23_23_33_17_rec_massage:2131204599.aif  2020_05_24_00_02_13_17.aif  2020_06_04_17_28_48_16807.aif  2020_06_05_18_43_30_rec_massage:1356425228.aif  2020_06_05_18_55_06_rec_massage:585640194.aif  2020_06_05_18_58_13_rec_massage:1581030105.aif  2020_06_05_19_04_58_rec_massage:585640194.aif  2020_06_05_19_20_33_rec_massage:357571490.aif  2020_06_05_19_22_49_Makefile  2020_06_05_19_45_57_audio.h  2020_06_06_15_29_08_rec_massage:318153057.aif  2020_06_06_16_14_10_rec_massage:685583454.aif  (+198 more)
flock/: test2.c  tmp.txt
inc/: audio.h  mail.h  uchat.h
json/: install_manifest.txt  libjson-c.5.0.0.dylib
json-c/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
json-c-0.14/: .gitignore  Makefile
json-c/apps/: json_parse
json-c/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test2  test4  testReplaceExisting  test_cast  test_int_add  test_json_pointer  test_locale  test_parse  test_printbuf  test_set_serializer  test_set_value
json/apps/: CTestTestfile.cmake  Makefile  cmake_install.cmake
json/inc/: config.h
json/src/: Makefile  random_seed.c
json/tests/: test1  test1Formatted  test2Formatted  test_charcase  test_compare  test_deep_copy  test_double_serializer  test_float  test_null  test_object_iterator  test_parse_int64  test_util_file  test_visit
libjson/: .gitignore
libmx/: Makefile  libmx.h  mx_strdel.c
libmx/src/: mx_atoi.c  mx_binary_search.c  mx_bubble_sort.c  mx_count_substr.c  mx_count_words.c  mx_create_node.c  mx_del_extra_spaces.c  mx_del_strarr.c  mx_digits_num.c  mx_file_to_str.c  mx_foreach.c  mx_get_char_index.c  mx_get_substr_index.c  mx_hex_to_nbr.c  mx_isalpha.c  mx_isdigit.c  mx_isspace.c  mx_itoa.c  mx_list_size.c  mx_memccpy.c  mx_memchr.c  mx_memcmp.c  mx_memcpy.c  mx_memmem.c  mx_memmove.c  mx_memrchr.c  mx_memset.c  mx_nbr_to_hex.c  mx_pop_back.c  mx_pop_front.c  mx_pow.c  mx_print_strarr.c  mx_print_unicode.c  mx_printint.c  mx_printstr.c  mx_push_back.c  mx_push_front.c  mx_quicksort.c  mx_read_line.c  mx_realloc.c  (+22 more)
libportaudio/: Makefile  config.status  libtool
libportaudio/examples/: pa_devs.c
libressl/: Makefile  config.status  libcrypto.pc  libssl.pc  libtls.pc  libtool  openssl.pc
libressl/apps/: Makefile
libressl/crypto/: Makefile
libressl/include/: Makefile
libressl/include-1/: Makefile
libressl/man/: Makefile
libressl/ssl/: Makefile  libssl.la
libressl/tests/: Makefile
libressl/tls/: Makefile  libtls.la
libressl_3/crypto/: Makefile
libressl_3/ssl/: Makefile  libssl.la
libressl_3/tls/: Makefile  libtls.la
libsndfile/: Makefile
libsndfile/arhive/: Makefile  Makefile2
libsndfile/src/: alac.txt  c.txt
portaudio/: Makefile
portaudio/examples/: pa_devs.c  paex_record.c  paex_record_file.c  paex_wmme_ac3.c
portaudio/inc/: pa_converters.h  pa_hostapi.h  pa_win_waveformat.h  portaudio-1.h  portaudio.h
portaudio/src/: all.txt  pa_devs.c  paex_record.c  paex_sine.c  patest_read_record.c  record_file.c
record/: rec_massage:1141231427.aif  rec_massage:1236634257.aif  rec_massage:1340040768.aif  rec_massage:1554426955.aif  rec_massage:46506142.aif  rec_massage:742794024.aif  rec_massage:760864727.aif
server/: Makefile  server_db-journal
server/inc/: uchat.h
server/libmx/: Makefile
server/src/: check_client_requests.c  daemonize.c  init_info.c  main.c  read_client_input.c  start_client.c  start_server.c  work_with_clients_list.c
src/client/: callbacks1.c  callbacks10.c  gui.c  (+66 more)
(+1587 files in other folders)
