cmake_minimum_required(VERSION 3.15)
project(uchat)

set(CMAKE_CXX_STANDARD 14)

include_directories(inc)
include_directories(libmx)
include_directories(libmx/inc)
include_directories(src)

add_executable(uchat
        inc/uchat.h
        libmx/inc/libmx.h
        libmx/src/mx_atoi.c
        libmx/src/mx_bubble_sort.c
        libmx/src/mx_clear_list.c
        libmx/src/mx_count_substr.c
        libmx/src/mx_count_words.c
        libmx/src/mx_create_node.c
        libmx/src/mx_del_strarr.c
        libmx/src/mx_file_to_str.c
        libmx/src/mx_foreach.c
        libmx/src/mx_get_char_index.c
        libmx/src/mx_get_sub_index.c
        libmx/src/mx_isalpha.c
        libmx/src/mx_isdigit.c
        libmx/src/mx_isspace.c
        libmx/src/mx_itoa.c
        libmx/src/mx_list_size.c
        libmx/src/mx_memcpy.c
        libmx/src/mx_pop_back.c
        libmx/src/mx_pop_front.c
        libmx/src/mx_pow.c
        libmx/src/mx_printchar.c
        libmx/src/mx_printerr.c
        libmx/src/mx_printint.c
        libmx/src/mx_printstr.c
        libmx/src/mx_printstr_color.c
        libmx/src/mx_push_back.c
        libmx/src/mx_push_front.c
        libmx/src/mx_realloc.c
        libmx/src/mx_replace_substr.c
        libmx/src/mx_str_reverse.c
        libmx/src/mx_strcat.c
        libmx/src/mx_strcmp.c
        libmx/src/mx_strcpy.c
        libmx/src/mx_strdel.c
        libmx/src/mx_strdup.c
        libmx/src/mx_strjoin.c
        libmx/src/mx_strlen.c
        libmx/src/mx_strncmp.c
        libmx/src/mx_strncpy.c
        libmx/src/mx_strndup.c
        libmx/src/mx_strnew.c
        libmx/src/mx_strsplit.c
        libmx/src/mx_strstr.c
        libmx/src/mx_strtrim.c
        libmx/src/mx_swap_char.c
        libmx/libmx.h
        libmx/mx_atoi.c
        libmx/mx_bubble_sort.c
        libmx/mx_clear_list.c
        libmx/mx_count_substr.c
        libmx/mx_count_words.c
        libmx/mx_create_node.c
        libmx/mx_del_strarr.c
        libmx/mx_file_to_str.c
        libmx/mx_foreach.c
        libmx/mx_get_char_index.c
        libmx/mx_get_sub_index.c
        libmx/mx_isalpha.c
        libmx/mx_isdigit.c
        libmx/mx_isspace.c
        libmx/mx_itoa.c
        libmx/mx_list_size.c
        libmx/mx_memcpy.c
        libmx/mx_pop_back.c
        libmx/mx_pop_front.c
        libmx/mx_pow.c
        libmx/mx_printchar.c
        libmx/mx_printerr.c
        libmx/mx_printint.c
        libmx/mx_printstr.c
        libmx/mx_printstr_color.c
        libmx/mx_push_back.c
        libmx/mx_push_front.c
        libmx/mx_realloc.c
        libmx/mx_replace_substr.c
        libmx/mx_str_reverse.c
        libmx/mx_strcat.c
        libmx/mx_strcmp.c
        libmx/mx_strcpy.c
        libmx/mx_strdel.c
        libmx/mx_strdup.c
        libmx/mx_strjoin.c
        libmx/mx_strlen.c
        libmx/mx_strncmp.c
        libmx/mx_strncpy.c
        libmx/mx_strndup.c
        libmx/mx_strnew.c
        libmx/mx_strsplit.c
        libmx/mx_strstr.c
        libmx/mx_strtrim.c
        libmx/mx_swap_char.c
        src/client/init_info.c
        src/client/input_from_client.c
        src/client/input_from_server.c
        src/client/main_client.c
        src/client/start_client.c
        src/help_funcs/err_exit.c
        src/server/chat_connect.c
        src/server/chat_menu.c
        src/server/check_client_requests.c
        src/server/daemonize.c
        src/server/init_info_server.c
        src/server/main_server.c
        src/server/message_received.c
        src/server/read_client_input.c
        src/server/sign_in.c
        src/server/sign_up.c
        src/server/start_client_server.c
        src/server/start_server.c
        src/server/work_with_clients_list.c
        Makefile
        README.md
        server_db)
